--- a/dotuser/sway/set.d/autostart.conf
+++ b/dotuser/sway/set.d/autostart.conf
@@ -1,5 +1,6 @@
 exec fcitx5 
-exec_always redshift -O 3500
+exec redshift -O 3500
 exec sh -c 'while true; do notify-send "I love linux!" "All distrobutions are best." -u normal; sleep 3600; done'
 exec goldendict
-exec copyq && copyq toggle
+exec copyq # Use "copyq config hide_main_window true & copyq config close_on_unfocus true"
+
