--- a/site/nginx/sites-available/trojan.conf
+++ b/site/nginx/sites-available/trojan.conf
@@ -1,7 +1,6 @@
 server {
     listen 80 ssl;
     server_name www.example.com;
-    root /var/www/html;
     ssl_certificate   /etc/letsencrypt/live/www.example.com/fullchain.pem;
     ssl_certificate_key  /etc/letsencrypt/live/www.example.com/privkey.pem;
     ssl_ciphers  TLS13-AES-256-GCM-SHA384:TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-128-GCM-SHA256:TLS13-AES-128-CCM-8-SHA256:TLS13-AES-128-CCM-SHA256:EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
@@ -11,4 +10,19 @@ server {
     ssl_session_timeout          10m;
     ssl_session_tickets          on;
     error_page 497  https://$host$request_uri;
+
+    location / {
+      root /var/www/html;
+      index index.html;
+    }
+
+    location /Read {
+      alias /root/Read;
+      index index.html;
+      autoindex on;
+      autoindex_exact_size off;
+      autoindex_localtime on;
+      charset utf-8;
+    }
 }
+
