--- a/site/nginx/sites-available/v2ray.conf
+++ b/site/nginx/sites-available/v2ray.conf
@@ -5,15 +5,28 @@ server {
   ssl_protocols         TLSv1.2 TLSv1.3;
   ssl_ciphers           HIGH:!aNULL:!MD5;
   server_name           www.example.com;
-  root /var/www/html;
-  index index.html;
-        location /d2yXDah4Wb13b {
-        proxy_redirect off;
-        proxy_pass http://127.0.0.1:10000;#假设WebSocket监听在环回地址的10000端>
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $http_host;
-        }
+
+    location / {
+      root /var/www/html;
+      index index.html;
+    }
+
+    location /Read {
+      alias /root/Read;
+      index index.html;
+      autoindex on;
+      autoindex_exact_size off;
+      autoindex_localtime on;
+      charset utf-8;
+    }
+
+    location /d2yXDah4Wb13b {
+      proxy_redirect off;
+      proxy_pass http://127.0.0.1:10000;#假设WebSocket监听在环回地址的10000端>
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $http_host;
+    }
 }
 
