--- a/site/nginx/sites-available/trojan.conf
+++ b/site/nginx/sites-available/trojan.conf
@@ -14,6 +14,7 @@ server {
     location / {
       root /var/www/html;
       index index.html;
+      charset utf-8;
     }
 
     location /Read {
