--- a/dotuser/sway/set.d/mybind.conf
+++ b/dotuser/sway/set.d/mybind.conf
@@ -2,8 +2,34 @@ bindsym $mod+p exec wlogout
 bindsym $mod+t exec thunar
 bindsym $mod+z exec goldendict $(wl-paste -n -p)
 bindsym $mod+c exec copyq && copyq toggle
+
 bindsym Ctrl+Shift+Escape exec zsh -c gnome-system-monitor
 bindsym Alt+p exec grim -g "$(slurp)" ~/.var/app/com.pot_app.pot/cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
 bindsym Alt+o exec grim -g "$(slurp)" ~/.var/app/com.pot_app.pot/cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
+
+# Switch to workspace
+bindsym Ctrl+$mod+q workspace q
+bindsym Ctrl+$mod+a workspace a
+bindsym Ctrl+$mod+z workspace z
+bindsym Ctrl+$mod+w workspace w
+bindsym Ctrl+$mod+s workspace s
+bindsym Ctrl+$mod+x workspace x
+bindsym Ctrl+$mod+e workspace e
+bindsym Ctrl+$mod+d workspace d
+bindsym Ctrl+$mod+c workspace c
+
+# Move focused container to workspace
+bindsym Ctrl+$mod+Shift+q move container to workspace q
+bindsym Ctrl+$mod+Shift+a move container to workspace a
+bindsym Ctrl+$mod+Shift+z move container to workspace z
+bindsym Ctrl+$mod+Shift+w move container to workspace w
+bindsym Ctrl+$mod+Shift+s move container to workspace s
+bindsym Ctrl+$mod+Shift+x move container to workspace x
+bindsym Ctrl+$mod+Shift+e move container to workspace e
+bindsym Ctrl+$mod+Shift+d move container to workspace d
+bindsym Ctrl+$mod+Shift+c move container to workspace c
+
+
+
 
 
