--- a/site/nginx/sites-available/trojan.conf
+++ b/site/nginx/sites-available/trojan.conf
@@ -1,5 +1,25 @@
 server {
-    listen 80 ssl;
+    listen 80;
+    server_name sleepsleepblog.buzz;
+
+    location / {
+      root /var/www/html;
+      index index.html;
+      charset utf-8;
+    }
+
+    location /Read {
+      alias /root/Read;
+      index index.html;
+      autoindex on;
+      autoindex_exact_size off;
+      autoindex_localtime on;
+      charset utf-8;
+    }
+}
+
+server {
+    listen 1234 ssl;
     server_name www.example.com;
     ssl_certificate   /etc/letsencrypt/live/www.example.com/fullchain.pem;
     ssl_certificate_key  /etc/letsencrypt/live/www.example.com/privkey.pem;
