--- a/site/nginx/sites-available/v2ray.conf
+++ b/site/nginx/sites-available/v2ray.conf
@@ -1,4 +1,24 @@
 server {
+    listen 80;
+    server_name sleepsleepblog.buzz;
+
+    location / {
+      root /var/www/html;
+      index index.html;
+      charset utf-8;
+    }
+
+    location /Read {
+      alias /root/Read;
+      index index.html;
+      autoindex on;
+      autoindex_exact_size off;
+      autoindex_localtime on;
+      charset utf-8;
+    }
+}
+
+server {
   listen 443 ssl;
   ssl_certificate       /etc/letsencrypt/live/www.example.com/fullchain.pem;
   ssl_certificate_key   /etc/letsencrypt/live/www.example.com/privkey.pem;
