--- a/dotuser/sway/set.d/mybind.conf
+++ b/dotuser/sway/set.d/mybind.conf
@@ -1,6 +1,6 @@
 bindsym $mod+p exec wlogout
 bindsym $mod+t exec thunar
-bindsym $mod+z exec goldendict $(wl-paste -n -p) && swaymsg "[app_id=]" floating enable
+bindsym $mod+z exec goldendict $(wl-paste -n -p) 
 bindsym $mod+c exec copyq && copyq toggle
 bindsym $mod+x exec curl "127.0.0.1:60828/selection_translate" 
 
