--- a/dotuser/sway/set.d/mybind.conf
+++ b/dotuser/sway/set.d/mybind.conf
@@ -30,6 +30,10 @@ bindsym Ctrl+$mod+Shift+e move container to workspace e
 bindsym Ctrl+$mod+Shift+d move container to workspace d
 bindsym Ctrl+$mod+Shift+c move container to workspace c
 
+# Switch to next workspace
+bindsym $mod+bracketleft workspace prev  
+bindsym $mod+bracketright workspace next
+
 
 
 
