--- a/dotuser/sway/set.d/display.conf
+++ b/dotuser/sway/set.d/display.conf
@@ -1,7 +1,7 @@
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg ../debian_gray.jpg fill
+output * bg ../debian_dark.jpg fill
 
 set $bg #FF55FF
 set $br #FFFFFF
