--- a/dotuser/nvim/coc-settings.json
+++ b/dotuser/nvim/coc-settings.json
@@ -3,4 +3,5 @@
     "clangd.path": "clangd-16"
     "lua.path": "lua5.4"
     "http.proxy": "http:127.0.0.1:1080",
+    "snippets.ultisnips.pythonPrompt": false,
 }
