--- a/dotuser/sway/set.d/display.conf
+++ b/dotuser/sway/set.d/display.conf
@@ -4,7 +4,7 @@
 output * bg ../debian_dark.jpg fill
 
 set $bg #FF55FF
-set $br #FFFFFF
+set $br #999999
 set $brbug #FF0000
  
 # class                 border  backgr. text    indicator child_border
