--- a/dotuser/sway/set.d/display.conf
+++ b/dotuser/sway/set.d/display.conf
@@ -14,6 +14,11 @@ client.unfocused        $br     $br     $br     $br       $br
 
 default_border pixel 4
 
+# 配置隐藏标题栏(包括悬浮窗的)
+font pango: monospace 0.001
+titlebar_border_thickness 0
+titlebar_padding 0
+
 # Example configuration:
 #
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
@@ -46,3 +51,6 @@ default_border pixel 4
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
+
+
+
