--- a/dotuser/sway/set.d/mybind.conf
+++ b/dotuser/sway/set.d/mybind.conf
@@ -4,7 +4,7 @@ bindsym $mod+z exec goldendict $(wl-paste -n -p)
 bindsym $mod+c exec copyq && copyq toggle
 bindsym $mod+x exec curl "127.0.0.1:60828/selection_translate" 
 
-bindsym Ctrl+Shift+Escape exec zsh -c gnome-system-monitor
+bindsym Ctrl+Shift+Escape exec gnome-system-monitor
 bindsym Alt+p exec grim -g "$(slurp)" ~/.var/app/com.pot_app.pot/cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
 bindsym Alt+o exec grim -g "$(slurp)" ~/.var/app/com.pot_app.pot/cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
 
