--- a/dotuser/waybar/config
+++ b/dotuser/waybar/config
@@ -135,7 +135,7 @@
     // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
     "critical-threshold": 80,
     // "format-critical": "{temperatureC}°C {icon}",
-    "format": "{temperatureC}°C {icon}",
+    "format": "{temperatureC}\n°\nC\n{icon}",
     "format-icons": [
       "",
       "",
