--- a/dotuser/sway/set.d/display.conf
+++ b/dotuser/sway/set.d/display.conf
@@ -15,9 +15,9 @@ client.unfocused        $br     $br     $br     $br       $br
 default_border pixel 4
 
 # 配置隐藏标题栏(包括悬浮窗的)
-font pango: monospace 0.001
-titlebar_border_thickness 0
-titlebar_padding 0
+# font pango: monospace 0.001
+# titlebar_border_thickness 0
+# titlebar_padding 0
 
 # Example configuration:
 #
