optimize,new user

--- a/dot-user-h/sway/set.d/display.conf
+++ b/dot-user-h/sway/set.d/display.conf
@@ -1,18 +1,19 @@
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg ../debian_dark.jpg fill
+output * bg ../debian-dark.jpg fill
 
 set $bg #FF55FF
 set $br #999999
 set $brbug #FF0000
+set $gray #222222
  
 # class                 border  backgr. text    indicator child_border
-client.focused          $bg     $bg     $bg     $bg       $bg
-client.focused_inactive $br     $br     $br     $br       $br
-client.unfocused        $br     $br     $br     $br       $br
+client.focused          $bg     $bg     $gray   $brbug    $bg
+client.focused_inactive $br     $br     $gray   $brbug    $br
+client.unfocused        $br     $br     $gray   $brbug    $br
 
-default_border pixel 4
+# default_border pixel 4
 
 # 配置隐藏标题栏(包括悬浮窗的)
 # font pango: monospace 0.001
