--- a/dot-user-h/sway/set.d/display.conf
+++ b/dot-user-h/sway/set.d/display.conf
@@ -3,15 +3,16 @@
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg ../debian-dark.jpg fill
 
-set $bg #FF55FF
-set $br #999999
-set $brbug #FF0000
-set $gray #222222
+set $pink #FF55FF
+set $gray #BBBBBB
+set $red #FF0000
+set $black #222222
+set $yellow #FFEF00
  
 # class                 border  backgr. text    indicator child_border
-client.focused          $bg     $bg     $gray   $brbug    $bg
-client.focused_inactive $br     $br     $gray   $brbug    $br
-client.unfocused        $br     $br     $gray   $brbug    $br
+client.focused          $pink     $pink     $black   $red    $pink
+client.focused_inactive $yellow   $yellow   $black   $red    $gray
+client.unfocused        $gray     $gray     $black   $red    $gray
 
 # default_border pixel 4
 
