--- a/dot-user-h/sway/set.d/mybind.conf
+++ b/dot-user-h/sway/set.d/mybind.conf
@@ -8,6 +8,9 @@ bindsym Ctrl+Shift+Escape exec gnome-system-monitor
 bindsym Alt+p exec grim -g "$(slurp)" ~/.var/app/com.pot_app.pot/cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
 bindsym Alt+o exec grim -g "$(slurp)" ~/.var/app/com.pot_app.pot/cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
 
+# Maximize window
+bindsym Ctrl+$mod+space floating toggle, resize set width 100ppt height 97ppt
+
 # Switch to workspace
 bindsym Ctrl+$mod+q workspace q
 bindsym Ctrl+$mod+a workspace a
