--- a/dot-user-h/waybar/config
+++ b/dot-user-h/waybar/config
@@ -229,7 +229,7 @@
   // Top waybar
 
 {
-  "layer": "top", // Waybar at top layer
+  // "layer": "top", // Waybar at top layer
   // "position": "bottom", // Waybar position (top|bottom|left|right)
   "height": 10, // Waybar height (to be removed for auto height)
   // "width": 1280, // Waybar width
