--- a/dot-user-h/sway/set.d/display.conf
+++ b/dot-user-h/sway/set.d/display.conf
@@ -1,7 +1,7 @@
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg ../debian-dark.jpg fill
+output * bg ../zlib.jpg fill
 
 set $pink #FF55FF
 set $gray #BBBBBB
