--- a/dot-user-h/sway/set.d/mybind.conf
+++ b/dot-user-h/sway/set.d/mybind.conf
@@ -2,8 +2,8 @@ bindsym $mod+p exec wlogout
 bindsym $mod+t exec thunar
 bindsym $mod+z exec goldendict $(wl-paste -n -p) 
 bindsym $mod+c exec copyq && copyq toggle
-bindsym $mod+x exec curl "127.0.0.1:60828/selection_translate" 
-# bindsym $mod+x exec "bash -c 'curl -d \"$(wl-paste -p)\" \"127.0.0.1:60828/translate\"'"
+# bindsym $mod+x exec curl "127.0.0.1:60828/selection_translate" 
+bindsym $mod+x exec "bash -c 'curl -d \"$(wl-paste -p)\" \"127.0.0.1:60828/translate\"'"
 bindsym $mod+shift+s exec grimshot copy area 
 
 bindsym Ctrl+Shift+Escape exec gnome-system-monitor
