--- a/dot-user-h/waybar/config
+++ b/dot-user-h/waybar/config
@@ -6,8 +6,7 @@
   "spacing": 4, // Gaps between modules (4px)
   // Choose the order of the modules
   "modules-left": [
-    "clock",
-    "wlr/taskbar"
+    "clock"
     // "sway/workspaces",
     // "sway/mode",
     // "sway/scratchpad",
