waybar del temperature

--- a/dot-user-h/waybar/config
+++ b/dot-user-h/waybar/config
@@ -20,8 +20,8 @@
     "idle_inhibitor",
     "cpu",
     "memory",
-    "tray",
-    "temperature"
+    "tray"
+    // "temperature"
       // "mpd",
     // "battery",
     // "network",
